<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_score"
        android:textSize="35sp"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/totalScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_total_score"
        android:textSize="20sp"
        android:layout_marginTop="60dp" />

    <!--res/drawable/内のフォルダを参照、変更する-->
    <Button
        android:id="@+id/returnBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"

        android:background="@drawable/security_button"
        android:scrollbarTrackHorizontal="@drawable/security_button"
        android:text="@string/btn_return"
        android:textColor="#fffef6"
        app:backgroundTint="@null" />


</LinearLayout>